Version 0.9.38a
    Bug Fixes:
        * #1729 - Strings marshaled incorrectly.
Version 0.9.38
    Bug Fixes:
        * #1711 - iOSClient Error does not implement interface member
        * #1712 - Signing in/out multiple google accounts
        * #1699 - GetServerAuthCode causes "invalid_grant: Code was already redeemed
        * #1692 - See semi-transparent black screen during login.
        * #1675 - Calling Signout causes crash.
Version 0.9.37
    Bug Fixes:
        * #1604 - Incompatible class error with play-services 10.1.
        * #370 - Fixed freeze/crash when calling Application.Quit().
    New Features:
        * #35 - Added a method to inhibit achievment popups.
        * Google SignIn support for Auth Code, Id Token and email.
        * Updated to use GPGS C++ SDK version 2.3.
        * Added the Video Capture API.
    Deprecated Features:
        * iOS Support will be winding down, ending iOS services in March 2018.
            See https://android-developers.googleblog.com/2017/04/focusing-our-google-play-games-services.html

        ** IMPORTANT **
        This is the last version with iOS support for GPGS.  Plan accordingly.
        ** IMPORTANT **

        * Quests are deprecated.

Version 0.9.36
    Bug Fixes:
        * #1432 - Updating Authenticate to match Unity 5.5 interface.
        * #1496 - Fixing NO_GPGS not being honored.
        * Disabled JarResolver for iOS, added instructions for CocoaPods.
    New Features:
        * #1346 - Check if Play Games is installed.
Version 0.9.35
    Bug Fixes:
        * #1194 - OnPostprocessAllAssets called before Resolver is registered.
        * #1209 - Stuck incremental achievements due to lost precision (via PR #1258).
        * #1313 - NSInvalidArgumentException in iOS didRegisterForRemoteNotificationsWithDeviceToken.
        * #1360 - Fixed Object not set to instance in PlayServicesResolver.
        * #1361 - Removed multiple Resolver version log messages.