@@ -443,6 +443,23 @@ The player stats are available after authenticating:
         });
 ```
 
+## Setting popup gravity
+
+You can set the gravity used by popups when showing game services elements
+such as achievement notificartions.  The default is TOP.  This can only
+be set after authentication.  For example:
+
+```csharp
+    Social.localUser.Authenticate((bool success) =>
+                {
+                    if (success)
+                    {
+                        ((GooglePlayGames.PlayGamesPlatform)Social.Active).SetGravityForPopups(Gravity.BOTTOM);
+                    }
+                });
+```
+
+
 
 ## Revealing/Unlocking an Achievement
 
