@@ -347,6 +347,14 @@ namespace GooglePlayGames.BasicApi
     /// </summary>
     /// <returns>The API client.</returns>
     IntPtr GetApiClient();
+
+    /// <summary>
+    /// Sets the gravity for popups (Android only).
+    /// </summary>
+    /// <remarks>This can only be called after authentication.  It affects
+    /// popups for achievements and other game services elements.</remarks>
+    /// <param name="gravity">Gravity for the popup.</param>
+    void SetGravityForPopups(Gravity gravity);
   }
 
   /// <summary>
